# Voice-Studio

./: .gitignore  AGENT.md  AGENTS.md  AGENT_CONTRACT.md  ARCHITECTURAL_NOTES.md  ARCHITECTURE.md  AUDIO_DSP_PATH.md  CLAUDE.md  CSS_STYLING_FIX_PLAN.md  Cargo.toml  DSP_SETTINGS_ANALYSIS.md  DSP_STABILITY_IMPLEMENTATION_SPEC.md  GEMINI.md  PIPELINE_REVIEW.md  PRESET_FIXES.md  PRESET_SYSTEM.md  QWEN.md  README.md  SILENCE_CONTRACT_TASKS.md  TESTING.md  VxCoreDSP_Reference.txt  VxDynamics.jsfx  VxHiddenDSP.jsfx  VxProtector.jsfx  VxSmartBand.jsfx  analysis.py  audit_report.md  compare_audio_changes.py  data.py  presets.json  task.md  test.json  tinyTasks.md
.codex/: settings.json
.tinyMem/: store.sqlite3  store.sqlite3-shm  store.sqlite3-wal
analysis_output/: close_mic_loud_profile.json  close_mic_normal_profile.json  close_mic_whisper_profile.json  distant_profile.json  noisy_speech_profile.json  summary.json
assets/dtln/: dtln_weights_v1.manifest.json
docs/: RELEASE_PROCESS.md  UI_DESIGN.md  VIZIA.md
docs/agents/: AGENTS.md  AGENT_CONTRACT.md  AGENT_CONTRACT_SMALL.md  CLAUDE.md  CODEX.md  QWEN.md
docs/archive/: DEAD_CODE_DECISION.md  NEXT_STEPS.md  PRESET_SYSTEM.md  UI_AUDIT_REPORT.md  UI_CONSISTENCY_SUMMARY.md  UI_FIX_PLAN.md  UI_REFACTORING_PLAN.md  UI_VALIDATION_CHECKLIST.md  tasks.md
src/: auto_settings.rs  debug.rs  help.html  lib.rs  macro_controller.rs  meters.rs  presets.rs  ui.css  ui.css.bak  ui.css.bak2  ui.rs  ui_minimal.css  version.rs
src/dsp/: biquad.rs  breath_reducer.rs  clarity.rs  compressor.rs  control_slew.rs  de_esser.rs  denoiser.rs  deverber.rs  df3_denoiser.rs  dsp_denoiser.rs  dtln_core.rs  dtln_denoiser.rs  dtln_denoiser_tflite.rs  dtln_weights.rs  early_reflection.rs  envelope.rs  hiss_rumble.rs  limiter.rs  ml_denoise.rs  mod.rs  noise_learn_remove.rs  pink_ref_bias.rs  plosive_softener.rs  post_noise_cleanup.rs  profile_analyzer.rs  proximity.rs  recovery_stage.rs  spectral_guardrails.rs  speech_confidence.rs  speech_expander.rs  speech_hpf.rs  utils.rs
src/ui/: advanced.rs  components.rs  layout.rs  meters.rs  mod.rs  simple.rs  state.rs
test_automation/: OPTIMIZATION_ANALYSIS.md  PRACTICAL_USES.md  README.md  auto_tune.py  batch_process.py  debug_optimization.py  inspect_vst.py  requirements.txt  test_vst_basic.py  verify_reference_audio.py
test_automation/results/: best_parameters.json  optimization_study.csv
test_data/: advanced.html  noise test.RPP  simpl.html
test_data/Backups/: noise test-2026-01-16_115302.rpp-bak
test_data/peaks/: close_mic_normal.wav.reapeaks
tools/: release.sh
tools/dtln/: export_dtln_weights.py  validate.rs
web/: help.html  index.html
